--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "vite-react-typescript-starter": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
